--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[codz]
 *$py.class
-
+*.pt
 # C extensions
 *.so
 
@@ -55,6 +55,9 @@ cover/
 *.mo
 *.pot
 
+
+#virtual invironmment
+Player
 # Django stuff:
 *.log
 local_settings.py
